Fixed table view issues on mobile devices.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,9 +6,6 @@
 */
 
 table {
-    border-collapse: collapse;
-    border-spacing: 0;
-    width: 80%;
     border: 1px solid #ddd;
     margin-left: auto;
     margin-right: auto;
@@ -17,7 +14,7 @@ table {
 th, td {
     border: none;
     text-align: left;
-    padding: 8px;
+    padding: 8px !important;
     min-width: 100px;
 }
 
